# speCTra

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: create_key.py  db_init.py  main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: api_keys.py  gateway.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  api_key.py
backend/app/services/providers/: anthropic.py  base.py  factory.py  gemini.py  openai.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/api-keys/: CreateKeyModal.tsx  KeyList.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx
frontend/src/types/: nav.ts
