[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectra-backend"
version = "0.1"
description = "Universal AI Gateway Middleware"
authors = [{ name = "speCTra Team", email = "info@spectra.ai" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]>=0.27.1",
    "sqlmodel",
    "alembic>=1.13.1",
    "httpx>=0.27.0",
    "redis>=5.0.1",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9"
]
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["app"]
